Add some 2.3.0 release highlights

--- a/_posts/2017-09-07-Styx 2.3.0-released.md
+++ b/_posts/2017-09-07-Styx 2.3.0-released.md
@@ -3,13 +3,17 @@ layout: post
 title: Styx 2.3.0 was released
 ---
 
-The Styx September 2.3.0 release brings another bunch of fixes for the MediaLibrary and the new gallery widget. And much more. Check the ChangeLog!
+The Styx September 2.3.0 release brings another bunch of fixes for the MediaLibrary and the new gallery widget. And much more. Check the ChangeLog!  
+Styx is PHP 7.1.x ready!
 
-## Styx 2.3.0 runs
+## Styx 2.3.0 runs ()
 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
+  - Adding the new Gallery Widget for simple and easy gallery entries
+  - Fixing old bugs in the MediaLibrary and refactored image processing
+  - Lots of optimizing for the comments, ping- and trackbacks
+  - Latest Smarty
+  - Strengthens Maintenance Mode handling
+  - Enhance and optimize $serendipity['logger'] log/* files usage
+  - Theme changes and security
+  - Preparations for the future
+  - And certainly a lot more...
