Minors for the posts

--- a/_posts/2017-09-07-Styx 2.3.0-released.md
+++ b/_posts/2017-09-07-Styx 2.3.0-released.md
@@ -4,9 +4,9 @@ title: Styx 2.3.0 was released
 ---
 
 The Styx September 2.3.0 release brings another bunch of fixes for the MediaLibrary and the new gallery widget. And much more. Check the ChangeLog!  
-Styx is PHP 7.1.x ready!
+Styx is **PHP 7.1.x** ready!
 
-## Styx 2.3.0 runs ()
+## Styx 2.3.0 runs (...some highlights)
 
   - Adding the new Gallery Widget for simple and easy gallery entries
   - Fixing old bugs in the MediaLibrary and refactored image processing
