--- a/_posts/2017-06-24-Styx 2.2.0-released.md
+++ b/_posts/2017-06-24-Styx 2.2.0-released.md
@@ -5,13 +5,13 @@ title: Styx 2.2.0 was released
 
 Styx 2.2.0 June release did not only finalise the 2.1.0 Snapshot, it also brought in some exiting new additions. Check the ChangeLog!
 
-## Styx 2.2.0 runs (some highlights)
+## Styx 2.2.0 runs (...some highlights)
 
   - Works on Readiness for PHP 7.1
-  - Spend some love to backend comments list for a better distinction of Comments/Trackbacks/Pingbacks
+  - Optimise backend comments list for a better distinction of Comments/Trackbacks/Pingbacks
   - Secure and Optimise the Modemaintain Plugin
   - Improve the Dashboard
-  - Works to replace SHA1 with random_bytes to generate cryptographically secure pseudo-random bytes
+  - Add and use random_bytes() to generate cryptographically secure pseudo-random bytes
   - Enhances Themes
   - Added secure installer with a token
   - Lots of backend optimizations
