--- a/_posts/2017-09-07-Styx 2.3.0-released.md
+++ b/_posts/2017-09-07-Styx 2.3.0-released.md
@@ -10,10 +10,10 @@ Styx is **PHP 7.1.x** ready!
 
   - Adding the new Gallery Widget for simple and easy gallery entries
   - Fixing old bugs in the MediaLibrary and refactored image processing
-  - Lots of optimizing for the comments, ping- and trackbacks
+  - Lots of optimising for the comments, ping- and trackbacks
   - Latest Smarty
   - Strengthens Maintenance Mode handling
-  - Enhance and optimize $serendipity['logger'] log/* files usage
+  - Enhance and optimise $serendipity['logger'] log/* files usage
   - Theme changes and security
   - Preparations for the future
   - And certainly a lot more...
