Add some links to posts

--- a/_posts/2017-06-24-Styx 2.2.0-released.md
+++ b/_posts/2017-06-24-Styx 2.2.0-released.md
@@ -3,7 +3,7 @@ layout: post
 title: Styx 2.2.0 was released
 ---
 
-Styx 2.2.0 June release did not only finalise the 2.1.0 Snapshot, it also brought in some exiting new additions. Check the ChangeLog!
+Styx 2.2.0 June release did not only finalise the 2.1.0 Snapshot, it also brought in some exiting new additions. Check the [ChangeLog](https://github.com/ophian/styx/blob/styx2.2/docs/NEWS)!
 
 ## Styx 2.2.0 runs (...some highlights)
 
@@ -17,3 +17,5 @@ Styx 2.2.0 June release did not only finalise the 2.1.0 Snapshot, it also brough
   - Lots of backend optimizations
   - Replace the old and deprecated mcrypt library with oppenssl for login attempts
   - And lots more..!
+
+See [download](https://github.com/ophian/styx/releases/tag/2.2.0)
