--- a/_posts/2017-09-07-Styx 2.3.0-released.md
+++ b/_posts/2017-09-07-Styx 2.3.0-released.md
@@ -3,7 +3,7 @@ layout: post
 title: Styx 2.3.0 was released
 ---
 
-The Styx September 2.3.0 release brings another bunch of fixes for the MediaLibrary and adds the new gallery widget. And much more. Check the [ChangeLog](https://github.com/ophian/styx/blob/styx2.3/docs/NEWS) for details!  
+The Styx September 2.3.0 release brings another bunch of fixes for the MediaLibrary and adds the new gallery widget. And much more. Check the [ChangeLog](https://github.com/ophian/styx/blob/2.3.0/docs/NEWS) for details!  
 Styx is **PHP 7.1.x** ready!
 
 ## Styx 2.3.0 runs (...some highlights)
