--- a/_posts/2017-10-09-Styx 2.4-beta1-released.md
+++ b/_posts/2017-10-09-Styx 2.4-beta1-released.md
@@ -3,18 +3,18 @@ layout: post
 title: Styx 2.4-beta1 was released
 ---
 
-The Styx October 2.4-beta1 release brings exiting news for MySQLi users, "finally" fixes the MediaLibrary and adds a new maintenance cleanup widget. And much more. Check the [ChangeLog](https://github.com/ophian/styx/blob/2.4-beta1/docs/NEWS) for details!
+The Styx October 2.4-beta1 release brings exiting news for MySQLi users, "finally" fixes the MediaLibrary and adds some new widgets. And much more. Check the [ChangeLog](https://github.com/ophian/styx/blob/2.4-beta1/docs/NEWS) for details!
 And remember, Styx is **PHP 7.1.x** ready!
 
 ## Styx 2.4-beta1 runs (...some highlights)
 
   - Set minimum required PHP version to 5.4+
-  - Adding the migration task for full utf8mb4 unicode support on MySQL server databases >= v.5.5.3
-  - Installing new systems already utf8mb4 ready, if supported
-  - Adding a new spambloglog cleanup widget for SPAM-blown-up log database tables
+  - Adding the migration task for full UTF8MB4 unicode support on MySQL server databases >= v.5.5.3
+  - Installing new mysql systems already UTF8MB4 ready, if supported
+  - Adding a new spambloglog CLEANUP widget for SPAM-blown-up log database tables
   - Adding responsiveimages event plugin, which creates an easy way for authors to upload differently sized images and to scale images to the visitors viewport width
   - Fixing some more old and odd bugs in the MediaLibrary and its tasks (see changelog for details)
-  - Preparations for translatable theme info strings for the themes info.txt file info layer, already done for [de]
+  - Preparations for translated theme info strings in the theme info layer, already done for [de]
   - Lots of optimising for the lang constants
   - Other optimized (backend) handlers and bugfixes
   - And some more...
