Some minor fixes for 6a07d7d

--- a/_posts/2017-11-17-Styx 2.4.0-released.md
+++ b/_posts/2017-11-17-Styx 2.4.0-released.md
@@ -8,14 +8,15 @@ Styx is **PHP 7.1.x** ready!
 
 ## Styx 2.4.0 runs (...some highlights)
 
-  - Set minimum required PHP version to 5.4+
+  - Set minimum required PHP version to 5.4+.
   - Adding the migration task for full UTF8MB4 unicode support on MySQL server databases >= v.5.5.3
-  - Installing new mysql systems already UTF8MB4 ready, if supported
+  - Installing new MySQL systems already UTF8MB4 ready, if supported
   - Adding a new spamblocklog CLEANUP widget for SPAM-blown-up log database tables
-  - Adding and moving certain core plugins to the "additional_plugins" Spartacus repsitory. One of it is the responsiveimages event plugin, which creates an easy way for authors to upload differently sized images and to scale images to the visitors viewport width.
+  - Adding and moving certain core plugins to the "additional_plugins" Spartacus repository. One of it is the new responsiveimages event plugin, which creates an easy way for authors to upload differently sized images and to scale images to the visitors viewport width.
   - Fixing some more old and odd bugs in the MediaLibrary and its tasks (see changelog for details)
   - Preparations for translated theme info strings in the theme info layer, already done for [de]
   - Lots of optimising for the lang constants and others made translatable
+  - Important upgrade task fix for plugins out of sync. This is important to not have untouched and famished plugins lying around.
   - Other optimized (backend) handlers and bugfixes
   - Latest Smarty lib
   - SQLite optimizations
