--- a/_posts/2017-06-24-Styx 2.2.0-released.md
+++ b/_posts/2017-06-24-Styx 2.2.0-released.md
@@ -15,7 +15,7 @@ Styx 2.2.0 June release did not only finalise the 2.1.0 Snapshot, it also brough
   - Enhances Themes
   - Added secure installer with a token
   - Lots of backend optimizations
-  - Replace the old and deprecated mcrypt library with oppenssl for login attempts
+  - Replace the old and deprecated mcrypt library with openssl for login attempts
   - And lots more..!
 
 See [download](https://github.com/ophian/styx/releases/tag/2.2.0)
