--- a/_posts/2017-06-24-Styx 2.2.0-released.md
+++ b/_posts/2017-06-24-Styx 2.2.0-released.md
@@ -9,12 +9,12 @@ Styx 2.2.0 June release did not only finalise the 2.1.0 Snapshot, it also brough
 
   - Works on Readiness for PHP 7.1
   - Optimise backend comments list for a better distinction of Comments/Trackbacks/Pingbacks
-  - Secure and Optimise the Modemaintain Plugin
+  - Secure and optimise the modemaintain plugin
   - Improve the Dashboard
   - Add and use random_bytes() to generate cryptographically secure pseudo-random bytes
   - Enhances Themes
   - Added secure installer with a token
-  - Lots of backend optimizations
+  - Lots of Backend optimizations
   - Replace the old and deprecated mcrypt library with openssl for login attempts
   - And lots more..!
 
