--- a/_posts/2018-09-07-Styx 2.6.0-released.md
+++ b/_posts/2018-09-07-Styx 2.6.0-released.md
@@ -5,8 +5,7 @@ title: Serendipity Styx 2.6.0 - A Back-to-the-Roots Release
 
 As ever, read the ChangeLog or even the commit history for more. See [download](https://github.com/ophian/styx/releases/tag/2.6.0)
 
-                <div>
-                 <div>
+<div markdown="1">
 
 <h2>So what is the difference?</h2><br>
 
@@ -41,8 +40,7 @@ As ever, read the ChangeLog or even the commit history for more. See [download](
 
 <p>&nbsp;</p>
 
-                 </div>
-                </div>
+</div>
 
 Have fun and be productive with Serendipity Styx!<br />
 Ian Styx
