Last changes for b0bd73b

--- a/_posts/2018-09-07-Styx 2.6.0-released.md
+++ b/_posts/2018-09-07-Styx 2.6.0-released.md
@@ -3,7 +3,7 @@ layout: post
 title: Serendipity Styx 2.6.0 - A Back-to-the-Roots Release
 ---
 
-As ever, read the ChangeLog or even the commit history for more. See [download](https://github.com/ophian/styx/releases/tag/2.6.0)
+Styx 2018/4 - Long years of activity and continuously deep development have finally brought this shiny new release up to your attention.
 
 <div markdown="1">
  <div>
@@ -41,8 +41,10 @@ As ever, read the ChangeLog or even the commit history for more. See [download](
 
 <p>&nbsp;</p>
 
+<p>Have fun and be productive with Serendipity Styx!<br />
+Ian Styx</p>
+
  </div>
 </div>
 
-Have fun and be productive with Serendipity Styx!<br />
-Ian Styx
+As ever, read the [ChangeLog](https://github.com/ophian/styx/blob/2.6.0/docs/NEWS) or even the commit [history](https://github.com/ophian/styx/commits/2.6.0) for more. See [download](https://github.com/ophian/styx/releases/tag/2.6.0)
