Fix a typo and some highlights

--- a/_posts/2018-09-07-Styx 2.6.0-released.md
+++ b/_posts/2018-09-07-Styx 2.6.0-released.md
@@ -13,9 +13,9 @@ Styx 2018/4 - Long years of activity and continuously deep development have fina
 <p>The difference is under the hood. since <strong>Serendipity Styx</strong> does hold what was <strong>promised</strong> with Serendipity for such a long time.</p>
 
 <p>The <strong>changes</strong> and <strong>fixes</strong> are <strong>uncountable</strong>. A very <strong>simple Serendipity user</strong> won't hardly ever notice, except for some obvious GUI related changes, since <em>‘he</em>’ does not care of all the extended promises, which do not work for the reason of being <em>unfinished</em> from start or being <em>borked</em> by in past added tweaks or the fluent development. The one writes some <strong>articles</strong>, uploads an <strong>image</strong>, uses some <strong>categories </strong>and may even get some comments. <strong>Thats it</strong>!<br />
-<em>Nothing to worry about, noting to care.</em> As you might know, a production release is designed to be very forgiving and let the users simply do their work. <em>All seems well-matched and pleasant ready for extended future usage... </em></p>
+<em>Nothing to worry about, nothing to care.</em> As you might know, a production release is designed to be very forgiving and let the users simply do their work. <em>All seems well-matched and pleasant ready for extended future usage... </em></p>
 
-<p><strong>Yes</strong>, this is where the <strong>Serendipity Styx</strong> Edition comes into place. Its not there to be <em>overconfident</em> and say it is <em>ever ready</em>, since the author himself is always impressed and amazed of how much of those <em>bugged</em> or <em>unfinished</em> properties he has to <strong>face</strong> and to <strong>fix</strong> in the ongoing release cycles. <strong>But</strong> since having fixed an enormous amount of bugs and failing design patterns, <strong>Serendipity Styx</strong> is proud to say, that it has been done as much as possible, to polish and tune this up and keep the tremendous goal alive of being simple and infinite extendable together at the same time. All the past Designers of Serendipity conceptualised a system that kept to be incredibly modern and predictive, which is not that easy seeing all these fast and immense development progresses in these first two decades of the <strong>21st</strong> century, regarding programming languages, design patterns and security.</p>
+<p><strong>Yes</strong>, this is where the <strong>Serendipity Styx</strong> Edition comes into place. Its not there to be <em>overconfident</em> and say it is <em>ever ready</em>, since the author himself is always impressed and amazed of how much of those <em>bugged</em> or <em>unfinished</em> properties he has to <strong>face</strong> and to <strong>fix</strong> in the ongoing release cycles. <strong>But</strong> since having fixed an enormous amount of bugs and failing design patterns, <strong>Serendipity Styx</strong> is proud to say, that it has been done as much as possible, to polish and tune this up and keep the tremendous goal alive of being <strong>simple</strong> and <strong>infinite extendable</strong> together at the same time. All the past Designers of Serendipity conceptualised a system that kept to be incredibly <strong>modern</strong> and <strong>predictive</strong>, which is not that easy seeing all these fast and immense development progresses in these first two decades of the <strong>21st</strong> century, regarding programming languages, design patterns and security.</p>
 
 <h2>Now, what exactly has happened since the Beta?</h2><br>
 
@@ -37,11 +37,11 @@ Styx 2018/4 - Long years of activity and continuously deep development have fina
 
 <p>And of course, Serendipity Styx is deeply tested with the latest <strong>PHP 7.2</strong> release.</p>
 
-<p>As a last-minute <strong>bonbon</strong> the maintenance section got extended with a so called "Theme Manager Clearance Spot". This will help you to quickly get rid of any private or additional themes in your themes directory, without having to start FTP once.</p>
+<p>As a last-minute <strong>bonbon</strong> the maintenance section got extended with a so called "Theme Manager Clearance Spot". This will help you to quickly get rid of any private or additional themes in your themes directory, without having to start FTP once. Naturally benefits upgraders only.</p>
 
 <p>&nbsp;</p>
 
-<p>Have fun and be productive with Serendipity Styx!<br />
+<p>Have fun and be productive with <strong>Serendipity Styx</strong>!<br />
 Ian Styx</p>
 
  </div>
