Improve last post

--- a/_posts/2018-09-16-Styx 2.6.1-released.md
+++ b/_posts/2018-09-16-Styx 2.6.1-released.md
@@ -10,7 +10,7 @@ Styx 2018/5 - Short bugfix update for certain issues
 
 <h2>Refactor, Rebuild, Regression</h2><br>
 
-<p>Mainly an odd plain editor NL2BR / NL2P parsing regression added by Styx 2.6-alpha1 was fixed, that prevented correct parsing of plain text markup_elements.</p>
+<p>Mainly an odd plain editor NL2BR / NL2P parsing regression was fixed, that prevented correct parsing of plain text markup_elements in certain situations.</p>
 
 <p>Also the maintenance MediaLibrary-Synchronizer thumbnail rebuilding area was refactored and conditionally fixed. It now works very much as expected.</p>
 
