blog: Change fb9ed60 vice versa

--- a/_posts/2018-04-19-Styx 2.5-beta1-released.md
+++ b/_posts/2018-04-19-Styx 2.5-beta1-released.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Serendipity Styx 2.5-beta1 release is on the road
+title: Styx 2.5-beta1 release is on the road
 ---
 
 Styx 2018/1 - The 2.5-beta1 release is ready for attention! Check the [ChangeLog](https://github.com/ophian/styx/blob/2.5-beta1/docs/NEWS) for details!
