--- a/_posts/2018-05-15-Styx 2.5.0-released.md
+++ b/_posts/2018-05-15-Styx 2.5.0-released.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Serendipity Styx 2.5.0 release
+title: Styx 2.5.0 release
 ---
 
 Styx 2018/2 - The 2.5.0 release is out! Check the [ChangeLog](https://github.com/ophian/styx/blob/2.5.0/docs/NEWS) for details!
