--- a/_posts/2018-09-07-Styx 2.6.0-released.md
+++ b/_posts/2018-09-07-Styx 2.6.0-released.md
@@ -1,6 +1,6 @@
 ﻿---
 layout: post
-title: Serendipity Styx 2.6.0 - A Back-to-the-Roots Release
+title: Styx 2.6.0 - A Back-to-the-Roots Release
 ---
 
 Styx 2018/4 - Long years of activity and continuously deep development have finally brought this shiny new release up to your attention.
