--- a/_posts/2018-09-16-Styx 2.6.1-released.md
+++ b/_posts/2018-09-16-Styx 2.6.1-released.md
@@ -1,6 +1,6 @@
 ﻿---
 layout: post
-title: Serendipity Styx 2.6.1 - Bugfix Release
+title: Styx 2.6.1 - Bugfix Release
 ---
 
 Styx 2018/5 - Short bugfix update for certain issues
