blog: Fix wrong mentioned var

--- a/_posts/2018-09-07-Styx-2.6.0-released.md
+++ b/_posts/2018-09-07-Styx-2.6.0-released.md
@@ -19,7 +19,7 @@ Styx 2018/4 - Long years of activity and continuously deep development have fina
 
 <h2>Now, what exactly has happened since the Beta?</h2><br>
 
-<p><strong>Serendipity Styx</strong> decided to go <strong>back to the roots</strong>. It changed the backend to where it belongs to, the <strong>default</strong> theme. While Serendipity <strong>2.0</strong> was developed over 2 years of heavy picking and replacing, a very lot of old XHTML and HTML4 code was replaced and therefore it was quite obvious to append the new developed Smarty Backend to the HTML5 <strong>Standard</strong> theme, which is <strong>2k11</strong>. Since 2k11 sloughed the previously used Standard Theme <em>Bulletproof</em>, it tried to replace and take apart the “<strong>default</strong>” theme, which even got more and more a forgotten fallback template quarry to take out old and unfocused things. The bleeding rest. To be blunt: <em>2k11 tried to take over</em>. This even got more and more relevant with the new backend and was a long going process of around 5 years in total. It was not that much in focus to think about the real relevance of <strong>default</strong> and <strong>standard</strong>. <em>And that even more, since the standard theme name is held in the $serendipity['default'] variable, which does not really help to sharpen the difference.</em> 😉</p>
+<p><strong>Serendipity Styx</strong> decided to go <strong>back to the roots</strong>. It changed the backend to where it belongs to, the <strong>default</strong> theme. While Serendipity <strong>2.0</strong> was developed over 2 years of heavy picking and replacing, a very lot of old XHTML and HTML4 code was replaced and therefore it was quite obvious to append the new developed Smarty Backend to the HTML5 <strong>Standard</strong> theme, which is <strong>2k11</strong>. Since 2k11 sloughed the previously used Standard Theme <em>Bulletproof</em>, it tried to replace and take apart the “<strong>default</strong>” theme, which even got more and more a forgotten fallback template quarry to take out old and unfocused things. The bleeding rest. To be blunt: <em>2k11 tried to take over</em>. This even got more and more relevant with the new backend and was a long going process of around 5 years in total. It was not that much in focus to think about the real relevance of <strong>default</strong> and <strong>standard</strong>. <em>And that even more, since the Standard Theme name is held in the $serendipity['defaultTemplate'] variable, which does not really help to sharpen the difference.</em> 😉</p>
 
 <p><strong>Back to the roots</strong> means in these terms: <strong>Default</strong> is the place of the <strong>last fallback cascade</strong>, not that much the present or absolute recommended frontend theme. It is the<strong> Serendipity</strong> <strong>Theme Basement</strong>, which is the right place to put a <strong>backend</strong>, since everything ends up here. A <strong>Standard Theme</strong> by comparison is just a current set, used and recommended <strong>standard</strong> for the weblog <strong>frontend</strong>. All items that are relevant to fall back, like remaining images for example and not particularly bound to the standard, are found in “default”.</p>
 
